Working with position in the Navbar for desktop And did the container forthe big news

--- a/code/index.html
+++ b/code/index.html
@@ -4,20 +4,42 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <header class="header">
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="./img/apple.svg" alt="pear-logo" />
+      <h1 class="site-name">Old News</h1>
+      <nav class="navbar">
+       <a href="#home">Home</a>
+       <a href="#About">About</a>
+       <a href="#Contact">Contact</a>
+       <a href="#Login">Log in</a>   
+      </nav>
     </header>
-
     <section class="big-news">
       <!-- The big news content -->
-    </section>
+      <img class="big-news-image" src="./img/nasa-U2uKrI4lci8-unsplash.jpg" alt="man on the moon" />
+      <div class="big-news-text">
+        <h2>One small step for a man, one giant leap for mankind</h2>
+        <p>Den 25 juni 1958 blev Armstrong, tillsammans med åtta andra piloter, utvald att delta i amerikanska flottans projekt Man in space Soonest som var ett program för att så snabbt som möjligt skicka upp en människa i rymden. Projektet lades ner 1 oktober 1958 när Nasa bildades och skulle administrera alla USA:s bemannade rymdflygningar. 
+        Den 17 september 1962 blev Armstrong som en av nio nya astronauter uttagen i Nasa:s astronautkår, specifikt till astronautgrupp 2.
+        Armstrong undgick döden med liten marginal när LLRV, en träningsmaskin som skulle simulera månlandaren, kraschade 6 maj 1968.
+        Armstrong lämnade Nasa 1 augusti 1970. 1971-1979 undervisade Armstrong i teknik vid University of Cincinnati. Han tjänstgjorde 1986 i den kommission som undersökte Challengerolyckan.</p>
+      </div>
+      </section>
 
     <section class="">
       <!-- The other news  -->
+      <p>gfjjghjgjgfgj</p>
+      <p>gfjjghjgjgfgj</p>
+      <p>gfjjghjgjgfgj</p>
+      <p>fdhhfgjhfgjjf</p>
     </section>
   </body>
 </html>
