--- a/code/index.html
+++ b/code/index.html
@@ -22,7 +22,7 @@
   <body>
     <section class="full__container">
       <header class="main__header">
-        <h1>Cat(news)meows</h1>
+        <img src="images/heading1.svg"/>
       </header>
       <nav class="my__nav">
         <a href="#">Startpage</a>
