Fixed the small problem

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header class="header">
+    <header>
       <!-- Some kind of logo and navbar -->
       <img class="logo" src="./img/apple.svg" alt="pear-logo" />
       <h1 class="site-name">Old News</h1>
