Solved a bug with the @media only part of the code so that the responsivness worked outside of F12 mode aswell

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
+    />
     <script
       src="https://kit.fontawesome.com/7ed1b41d25.js"
       crossorigin="anonymous"
