--- a/code/index.html
+++ b/code/index.html
@@ -16,12 +16,13 @@
       <img class="logo" src="./img/apple.svg" alt="pear-logo" />
       <h1 class="site-name">Old News</h1>
       <nav class="navbar">
-       <a href="#home">Home</a>
-       <a href="#About">About</a>
-       <a href="#Contact">Contact</a>
-       <a href="#Login">Log in</a>   
+       <a class="link-one" href="#home">Home</a>
+       <a class="link-two" href="#About">About</a>
+       <a class="link-thre" href="#Contact">Contact</a>
+       <a class="link-four" href="#Login">Log in</a>   
       </nav>
     </header>
+      <!--Big-news section-->
     <section class="big-news">
       <!-- The big news content -->
       <img class="big-news-image" src="./img/nasa-U2uKrI4lci8-unsplash.jpg" alt="man on the moon" />
@@ -32,18 +33,116 @@
         Armstrong undgick döden med liten marginal när LLRV, en träningsmaskin som skulle simulera månlandaren, kraschade 6 maj 1968.
         Armstrong lämnade Nasa 1 augusti 1970. 1971-1979 undervisade Armstrong i teknik vid University of Cincinnati. Han tjänstgjorde 1986 i den kommission som undersökte Challengerolyckan.</p>
       </div>
-      </section>
-      <img class="big-news-image" src="" alt="" />
-      <p>gfjjghjgjgfgj</p>
-      
     </section>
-
-    <section class="">
-      <!-- The other news  -->
-      <p>gfjjghjgjgfgj</p>
-      <p>gfjjghjgjgfgj</p>
-      <p>gfjjghjgjgfgj</p>
-      <p>fdhhfgjhfgjjf</p>
+    <!--Smaller news section-->
+    <section class="small-news">
+      <!--Small news content-->
+      <div class="article">
+        <img class="small-image" src="./img/computer.jpg" alt="guy at computer">
+        <h3 class="article-heading">Will your computer explode in year 2000?!</h3>
+        <p>The Year 2000 problem, also known as the Y2K problem,
+          Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
+          refers to potential computer errors related to the 
+          formatting and storage of calendar data for dates in 
+          and after the year 2000. Many programs represented four-digit
+          years with only the final two digits, making the year 2000
+          indistinguishable from 1900. Computer systems' inability to 
+          distinguish dates correctly could potentially bring down 
+          worldwide infrastructures for industries ranging from 
+          banking to air travel.
+          </p>
+      </div>
+      <div class="article">
+        <img class="small-image" src="./img/tjernobyl.jpg" alt="radioactive sign">
+        <h3 class="article-heading">Nuclear accident, 1986 in Tjernobyl</h3>
+        <p>The Year 2000 problem, also known as the Y2K problem,
+          Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
+          refers to potential computer errors related to the 
+          formatting and storage of calendar data for dates in 
+          and after the year 2000. Many programs represented four-digit
+          years with only the final two digits, making the year 2000
+          indistinguishable from 1900. Computer systems' inability to 
+          distinguish dates correctly could potentially bring down 
+          worldwide infrastructures for industries ranging from 
+          banking to air travel.
+          </p>
+      </div>
+      <div class="article">
+        <img class="small-image" src="./img/corona.jpg" alt="corona virus">
+        <h3 class="article-heading">We are in a Pandemic! 2020</h3>
+        <p>The Year 2000 problem, also known as the Y2K problem,
+          Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
+          refers to potential computer errors related to the 
+          formatting and storage of calendar data for dates in 
+          and after the year 2000. Many programs represented four-digit
+          years with only the final two digits, making the year 2000
+          indistinguishable from 1900. Computer systems' inability to 
+          distinguish dates correctly could potentially bring down 
+          worldwide infrastructures for industries ranging from 
+          banking to air travel.
+          </p>
+      </div>
+      <div class="article">
+        <img class="small-image" src="./img/club.jpg" alt="disco-balls">
+        <h3 class="article-heading">Swedish King at centre of strip club scandal, 2011</h3>
+        <p>The Year 2000 problem, also known as the Y2K problem,
+          Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
+          refers to potential computer errors related to the 
+          formatting and storage of calendar data for dates in 
+          and after the year 2000. Many programs represented four-digit
+          years with only the final two digits, making the year 2000
+          indistinguishable from 1900. Computer systems' inability to 
+          distinguish dates correctly could potentially bring down 
+          worldwide infrastructures for industries ranging from 
+          banking to air travel.
+          </p>
+      </div>
+      <div class="article">
+        <img class="small-image" src="./img/gun.jpg" alt="gun">
+        <h3 class="article-heading">The swedish primeminister <i>Olof Palme</i> was shot on open street. 1986</h3>
+        <p>The Year 2000 problem, also known as the Y2K problem,
+          Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
+          refers to potential computer errors related to the 
+          formatting and storage of calendar data for dates in 
+          and after the year 2000. Many programs represented four-digit
+          years with only the final two digits, making the year 2000
+          indistinguishable from 1900. Computer systems' inability to 
+          distinguish dates correctly could potentially bring down 
+          worldwide infrastructures for industries ranging from 
+          banking to air travel.
+          </p>
+      </div>
+      <div class="article">
+        <img class="small-image" src="./img/ship.jpg" alt="sinking ship">
+        <h3 class="article-heading">1628, The royal ship Vasa is sinking</h3>
+        <p>The Year 2000 problem, also known as the Y2K problem,
+          Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
+          refers to potential computer errors related to the 
+          formatting and storage of calendar data for dates in 
+          and after the year 2000. Many programs represented four-digit
+          years with only the final two digits, making the year 2000
+          indistinguishable from 1900. Computer systems' inability to 
+          distinguish dates correctly could potentially bring down 
+          worldwide infrastructures for industries ranging from 
+          banking to air travel.
+          </p>
+      </div>
+      <div class="article">
+        <img class="small-image" src="./img/earth.jpg" alt="the earth">
+        <h3 class="article-heading">shocking, the earth is not flat</h3>
+        <p>The Year 2000 problem, also known as the Y2K problem,
+          Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
+          refers to potential computer errors related to the 
+          formatting and storage of calendar data for dates in 
+          and after the year 2000. Many programs represented four-digit
+          years with only the final two digits, making the year 2000
+          indistinguishable from 1900. Computer systems' inability to 
+          distinguish dates correctly could potentially bring down 
+          worldwide infrastructures for industries ranging from 
+          banking to air travel.
+          </p>
+      </div>
     </section>
+    <footer>I´m a footer, thank you for readin!</footer>
   </body>
 </html>
