ny logga med kattmotiv

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <img class="logo" src="logo.svg" alt="Technigo">
+      <img class="logo" src="Katt-logga.png" alt="logga med kattmotiv">
       <nav class="nav-bar">
         <a>Menu</a>
         <a>About</a>
