--- a/code/index.html
+++ b/code/index.html
@@ -22,22 +22,23 @@
           <!--big news-->
     <div id="big-news"></div>
     <section class="big-news">
-       <img class="big-news-img" src="./main.jpg" alt="">
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <img class="big-news-img" src="./main.jpg" alt="">
+        <div class="intro"><h2><strong>text</strong></h2>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p></div>
     </section>
 
 <!---small news-->
   <div id="small-news"></div>
     <section class="container">
       <div class="small-news">
-         <img src="./pose.jpg" alt="">
+         <img src="./sitting.jpg" alt="">
          <h2 class=><strong>Purr-haps = Perhaps</strong></h2>
          <p><strong>adverb</strong></p>
          <p>1. Used to express uncertainty or possibility when a cat is around.</p>
          <p>2. “…Did your cat just eat my tuna sandwich? Purr-haps.”</p>
       </div> 
       <div class="small-news">
-        <img src="./sitting.jpg" alt="">
+        <img src="./pose.jpg" alt="">
         <h2><strong>Paw-sibility = Possibility</strong></h2>
          <p><strong>noun</strong>
          <p>1. A thing that may happen or be the case when a cat is around</p>
