Made the tablet navbar looking like the proto. maby in the wrong way but it is working

--- a/code/index.html
+++ b/code/index.html
@@ -15,25 +15,38 @@
       <!-- Some kind of logo and navbar -->
       <img class="logo" src="./img/apple.svg" alt="pear-logo" />
       <h1 class="site-name">Old News</h1>
-      <nav class="navbar">
-       <a class="link-one" href="#home">Home</a>
-       <a class="link-two" href="#About">About</a>
-       <a class="link-thre" href="#Contact">Contact</a>
-       <a class="link-four" href="#Login">Log in</a>   
-      </nav>
+      <nav>
+       <a class="link" id="one" href="#home">Home</a>
+       <a class="link" id="two" href="#About">About</a>
+       <img class="tablet-logo" src="./img/apple.svg" alt="pear-logo" />
+       <a class="link" id="thre" href="#Contact">Contact</a>
+       <a class="link" id="four" href="#Login">Log in</a>  
+       </nav> 
     </header>
       <!--Big-news section-->
     <section class="big-news">
       <!-- The big news content -->
       <img class="big-news-image" src="./img/nasa-U2uKrI4lci8-unsplash.jpg" alt="man on the moon" />
       <div class="big-news-text">
-        <h2>One small step for a man, one giant leap for mankind</h2>
+        <h2>The first man has landed on the moon</h2>
+        <strong>One small step for a man, one giant leap for mankind</strong>
         <p>Den 25 juni 1958 blev Armstrong, tillsammans med åtta andra piloter, utvald att delta i amerikanska flottans projekt Man in space Soonest som var ett program för att så snabbt som möjligt skicka upp en människa i rymden. Projektet lades ner 1 oktober 1958 när Nasa bildades och skulle administrera alla USA:s bemannade rymdflygningar. 
         Den 17 september 1962 blev Armstrong som en av nio nya astronauter uttagen i Nasa:s astronautkår, specifikt till astronautgrupp 2.
         Armstrong undgick döden med liten marginal när LLRV, en träningsmaskin som skulle simulera månlandaren, kraschade 6 maj 1968.
-        Armstrong lämnade Nasa 1 augusti 1970. 1971-1979 undervisade Armstrong i teknik vid University of Cincinnati. Han tjänstgjorde 1986 i den kommission som undersökte Challengerolyckan.</p>
+        Armstrong lämnade Nasa 1 augusti 1970. 1971-1979 undervisade Armstrong i teknik vid University of Cincinnati. Han tjänstgjorde 1986 i den kommission som undersökte Challengerolyckan.
+        </p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type 
+          specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in
+           the 1960s with the release of Letraset sheets 
+          containing Lorem Ipsum passages, and more recently with desktop publishing software
+           like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
       </div>
     </section>
+    <hr>
     <!--Smaller news section-->
     <section class="small-news">
       <!--Small news content-->
