--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-      <img class="logo" src="./cat.png" alt=""/>
+      <img class="logo" src="images/cat.png" alt=""/>
       <h1>cat-astrophe</h1>
       <nav class="navigation">
         <a href="#big-news">Big news</a>
@@ -18,83 +18,89 @@
         <a href="#">Contact</a>
       </nav>
     </header>
+
+    <!--div for the anchor function to jump to top-->
     <div id="top"></div>
-          <!--big news-->
+
+    <!--big news-->
     <div id="big-news"></div>
-    <section class="big-news">
+      <section class="big-news">
         <img class="big-news-img" src="images/main.jpg" alt="">
         <div class="intro"><h2><strong>text</strong></h2>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p></div>
-    </section>
+      </section>
 
 <!---small news-->
   <div id="small-news"></div>
     <section class="container">
       <div class="small-news">
          <img src="images/sitting.jpg" alt="">
-         <h2 class=><strong>Purr-haps = Perhaps</strong></h2>
-         <p><strong>adverb</strong></p>
-         <p>1. Used to express uncertainty or possibility when a cat is around.</p>
-         <p>2. “…Did your cat just eat my tuna sandwich? Purr-haps.”</p>
+          <h3 class=><strong>Purr-haps = Perhaps</strong></h3>
+          <p><strong>adverb</strong></p>
+          <p>1. Used to express uncertainty or possibility when a cat is around.</p>
+          <p>2. “…Did your cat just eat my tuna sandwich? Purr-haps.”</p>
       </div> 
       <div class="small-news">
-        <img src="images/pose.jpg" alt="">
-        <h2><strong>Paw-sibility = Possibility</strong></h2>
-         <p><strong>noun</strong>
-         <p>1. A thing that may happen or be the case when a cat is around</p>
-         <p>2.“…Did your cat just eat my tuna sandwhich? It’s a paw-sibility.”</p>
+          <img src="images/pose.jpg" alt="">
+          <h3><strong>Paw-sibility = Possibility</strong></h3>
+          <p><strong>noun</strong>
+          <p>1. A thing that may happen or be the case when a cat is around</p>
+          <p>2.“…Did your cat just eat my tuna sandwhich? It’s a paw-sibility.”</p>
       </div> 
       <div class="small-news">
         <img src="images/teeth.jpg" alt="">
-        <h2><strong>A-paw-ling = Appalling</strong></h2>
+        <h3><strong>A-paw-ling = Appalling</strong></h3>
          <p><strong>adjective</strong></p>
          <p>1. Causing shock or dismay for a cat; horrific.</p>
          <p>2. “The cat smelled a-paw-ling after running around the alleyways all night long.”</p>
       </div> 
       <div class="small-news">
         <img src="images/sitting2.jpg" alt="">
-        <h2><strong>Claw-ful = Awful</strong></h2>
+        <h3><strong>Claw-ful = Awful</strong></h3>
          <p><strong>adjective</strong></p>
          <p>1.Very bad or unpleasant; especially when pertaining to litter boxes.</p>
          <p>2.“The litter box smelled claw-ful after not changing it for a while.”</p>
       </div> 
       <div class="small-news">
         <img src="images/elton.jpg" alt="">
-        <h2><strong>Fur real = For Real</strong></h2>
+        <h3><strong>Fur real = For Real</strong></h3>
          <p><strong>informal</strong></p>
          <p>1. Used to assert that a cat is genuine or is actually the case.</p>
          <p>2.“I’m not playing games with you, mouse – this is fur real!”</p>
       </div> 
       <div class="small-news">
         <img src="images/eskil.jpg" alt="">
-        <h2><strong>Hiss-terical = Hysterical</strong></h2>
+        <h3><strong>Hiss-terical = Hysterical</strong></h3>
          <p><strong>adjective</strong></p>
          <p>1.Deriving from or affected by a cat with uncontrolled extreme emotion.</p>
          <p>2. “As soon as the cat entered the vet, he became hiss-terical.”</p>
       </div> 
       <div class="small-news">
         <img src="images/elton1.jpg" alt="">
-        <h2><strong>Meow = Now</strong></h2>
+        <h3><strong>Meow = Now</strong></h3>
          <p><strong>adverb</strong></p>
          <p>1. At the present time or moment; made popular by the 2001 cult-film classic, Super Troopers.</p>
          <p>2. “Go refill the food bowl – right meow!”</p>
       </div> 
       <div class="small-news">
         <img src="images/eskil1.jpg" alt="">
-        <h2><strong>Paw-er = Power</strong></h2>
+        <h3><strong>Paw-er = Power</strong></h3>
          <p><strong>noun</strong></p>
          <p>1. The capacity or ability to direct or influence the behavior of other cats.</p>
          <p>2.“The idea that men should have paw-er over cats is absurd. Come feed me, now.”</p>
       </div> 
     </section>
-  </body>
+</body>
 
   <footer>
+    <div class="links">
     <div class="top"><a href=""> 🢁</a></div>
+    
       <img src="images/celebration.png" alt="">
       <p><strong>Sofia</strong></p>
-    <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-    <div>Stickers made by <a href="https://www.flaticon.com/authors/stickerfolio" title="stickerfolio">stickerfolio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><div>
-    <div>The cred for the amazing puns goes to <a href="/https://whiskerstotailspetsitting.com/">Whiskerstotailspetsitting.com</a></div>
+      <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+      <div>Stickers made by <a href="https://www.flaticon.com/authors/stickerfolio" title="stickerfolio">stickerfolio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><div>
+      <div>The cred for the amazing puns goes to <a href="/https://whiskerstotailspetsitting.com/">Whiskerstotailspetsitting.com</a></div>
+  </div>
   </footer>
 </html>
